--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "name": "react-native-rb-video-player",
+  "name": "react-native-clwy-video-player",
   "version": "1.0.1",
   "dependencies": {
-    "react-native-keep-awake": "^4.0.0",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-orientation": "^3.1.3",
     "@brlja/react-native-slider": "^0.12.1",
     "react-native-vector-icons": "^6.6.0"
   },
@@ -17,7 +15,7 @@
     "react-test-renderer": "16.8.3"
   },
   "description": "An updated, customisable React Native video player for Android and IOS based on AF-video-player from abbasfreestyle",
-  "homepage": "https://github.com/rbcorrea/react-native-rb-video-player#readme",
+  "homepage": "https://github.com/clwy-cn/react-native-clwy-video-player#readme",
   "keywords": [
     "react-component",
     "react-native",
@@ -29,15 +27,15 @@
   ],
   "maintainers": [
     {
-      "name": "rbcorrea",
-      "email": "rodrigoxcorrea@gmail.com"
+      "name": "canonpd",
+      "email": "canonpd@gmail.com"
     }
   ],
   "license": "MIT",
   "author": {
-    "name": "Rodrigo Correa",
-    "email": "rodrigoxcorrea@gmail.com",
-    "url": "https://github.com/rbcorrea"
+    "name": "Aaron Liu",
+    "email": "canonpd@gmail.com",
+    "url": "https://github.com/clwy-cn"
   },
   "peerDependencies": {
     "prop-types": "*",
