--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "react-native-clwy-video-player",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "dependencies": {
     "react-native-linear-gradient": "^2.5.6",
-    "@brlja/react-native-slider": "^0.12.1",
-    "react-native-vector-icons": "^7.1.0"
+    "@brlja/react-native-slider": "^0.12.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
