--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "clwy-react-native-video-player",
-  "version": "1.1.9",
+  "version": "1.2.1",
   "dependencies": {
-    "@sayem314/react-native-keep-awake": "^1.1.0",
-    "react-native-linear-gradient": "^2.6.2",
-    "react-native-orientation-locker": "^1.5.0",
-    "react-native-vector-icons": "*"
+    "react-native-linear-gradient": "^2.6.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
